@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2016 Yoshimi project <https://github.com/Yoshimi> -->
+<!-- Copyright 2016 Yoshimi project <willgodfrey@musically.me.uk> -->
 <application>
  <id type="desktop">yoshimi.desktop</id>
  <metadata_license>CC0-1.0</metadata_license>
