@@ -66,7 +66,8 @@ static struct argp_option cmd_options[] = {
     {"alsa-midi",         'a',  "<device>",   1,  "use alsa midi input" },
     {"define-root",       'D',  "<path>",     0,  "define path to new bank root"},
     {"buffersize",        'b',  "<size>",     0,  "set internal buffer size" },
-    {"no-gui",            'i',  NULL,         0,  "no gui"},
+    {"no-gui",            'i',  NULL,         0,  "disable gui"},
+    {"gui",               'I',  NULL,         0,  "enable gui"},
     {"no-cmdline",        'c',  NULL,         0,  "don't show command line interface"},
     {"jack-audio",        'J',  "<server>",   1,  "use jack audio output" },
     {"jack-midi",         'j',  "<device>",   1,  "use jack midi input" },
@@ -144,7 +145,7 @@ Config::Config(SynthEngine *_synth, int argc, char **argv) :
     //which befaves exactly the same when flag FE_TOWARDZERO is set
 
     cerr.precision(4);
-    deadObjects = new BodyDisposal();    
+    deadObjects = new BodyDisposal();
     bRuntimeSetupCompleted = Setup(argc, argv);
 }
 
@@ -487,6 +488,7 @@ bool Config::extractConfigData(XMLwrapper *xml)
 
     audioEngine = (audio_drivers)xml->getpar("audio_engine", audioEngine, no_audio, alsa_audio);
     midiEngine = (midi_drivers)xml->getpar("midi_engine", midiEngine, no_midi, alsa_midi);
+    showGui = xml->getpar("enable_gui", showGui, 0, 1);
 
     // get bank dirs
     synth->getBankRef().parseConfigFile(xml);
@@ -602,6 +604,7 @@ void Config::addConfigXML(XMLwrapper *xmltree)
     xmltree->addpar("virtual_keyboard_layout", VirKeybLayout);
     xmltree->addpar("audio_engine", synth->getRuntime().audioEngine);
     xmltree->addpar("midi_engine", synth->getRuntime().midiEngine);
+    xmltree->addpar("enable_gui", synth->getRuntime().showGui);
 
     synth->getBankRef().saveToConfigFile(xmltree);
 
@@ -710,6 +713,7 @@ bool Config::extractRuntimeData(XMLwrapper *xml)
     audioDevice = xml->getparstr("audio_device");
     midiEngine = (midi_drivers)xml->getpar("midi_engine", DEFAULT_MIDI, no_midi, alsa_midi);
     midiDevice = xml->getparstr("midi_device");
+    showGui = xml->getpar("enable_gui", showGui, 0, 1);
     nameTag = xml->getparstr("name_tag");
     CurrentXMZ = xml->getparstr("current_xmz");
     xml->exitbranch();
@@ -724,6 +728,7 @@ void Config::addRuntimeXML(XMLwrapper *xml)
     xml->addparstr("audio_device", audioDevice);
     xml->addpar("midi_engine", midiEngine);
     xml->addparstr("midi_device", midiDevice);
+    xml->addpar("enable_gui", showGui);
     xml->addparstr("name_tag", nameTag);
     xml->addparstr("current_xmz", CurrentXMZ);
     xml->endbranch();
@@ -1046,6 +1051,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
         case 'l': settings->paramsLoad = string(arg); break;
         case 'L': settings->instrumentLoad = string(arg); break;
         case 'A':
+            settings->configChanged = true;
             settings->audioEngine = alsa_audio;
             if (arg)
                 settings->audioDevice = string(arg);
@@ -1053,6 +1059,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
                 settings->audioDevice = settings->alsaAudioDevice;
             break;
         case 'a':
+            settings->configChanged = true;
             settings->midiEngine = alsa_midi;
             if (arg)
                 settings->midiDevice = string(arg);
@@ -1060,6 +1067,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
                 settings->midiDevice = string(settings->alsaMidiDevice);
             break;
         case 'b': // messy but I can't think of a better way :(
+            settings->configChanged = true;
             num = Config::string2int(string(arg));
             if (num >= 1024)
                 num = 1024;
@@ -1082,14 +1090,21 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
                 settings->rootDefine = string(arg);
             break;
         case 'i':
+            settings->configChanged = true;
             settings->showGui = false;
             break;
+        case 'I':
+            settings->configChanged = true;
+            settings->showGui = true;
+            break;
         case 'J':
+            settings->configChanged = true;
             settings->audioEngine = jack_audio;
             if (arg)
                 settings->audioDevice = string(arg);
             break;
         case 'j':
+            settings->configChanged = true;
             settings->midiEngine = jack_midi;
             if (arg)
                 settings->midiDevice = string(arg);
@@ -1099,6 +1114,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
         case 'k': settings->startJack = true; break;
         case 'K': settings->connectJackaudio = true; break;
         case 'o':
+            settings->configChanged = true;
             num = Config::string2int(string(arg));
             if (num >= 16384)
                 num = 16384;
@@ -1118,6 +1134,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
             settings->Oscilsize = num;
             break;
         case 'R':
+            settings->configChanged = true;
             num = Config::string2int(string(arg));
             if (num >= 96000)
                 num = 96000;
@@ -1143,6 +1160,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
             break;
         #endif
         case 'c': // no-cmdline is handled in main()
+            settings->configChanged = true;
             break;
         case ARGP_KEY_ARG:
         case ARGP_KEY_END:
@@ -1150,6 +1168,7 @@ static error_t parse_cmds (int key, char *arg, struct argp_state *state)
         default:
             return ARGP_ERR_UNKNOWN;
     }
+
     return 0;
 }
 
