@@ -684,7 +684,6 @@ Pend->hide();}
       Fl_Button {} {
         label {Save and Close}
         callback {synth->getRuntime().saveConfig();
-synth->getRuntime().configChanged = false;
 pathwindow->do_callback();}
         xywh {225 268 105 20} box THIN_UP_BOX labelsize 12
       }
