@@ -1,5 +1,13 @@
 yoshimi 1.3.x
 
+2016-1-9 Will
+- Added gui state to config file
+- All major statup arguments now trigger the config changed message
+  for both gui and command line.
+
+2016-1-9 Andrew
+- Reconfigured main so first instance can access saved config before gui.
+
 2016-1-8 Will
 - Synchronised config change warning between gui and command line.
 - Implemented saving current part to external instrument.
